WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210997
REGRESSION(260485) Payment requests don't do anything
https://bugs.webkit.org/show_bug.cgi?id=210997
Summary
REGRESSION(260485) Payment requests don't do anything
Alex Christensen
Reported
2020-04-24 15:19:07 PDT
REGRESSION(260485) Payment requests don't do anything
Attachments
Patch
(3.63 KB, patch)
2020-04-24 15:21 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2020-04-24 15:21:47 PDT
Created
attachment 397515
[details]
Patch
Alex Christensen
Comment 2
2020-04-24 15:21:50 PDT
<
rdar://problem/62275343
>
Darin Adler
Comment 3
2020-04-24 16:04:29 PDT
Comment on
attachment 397515
[details]
Patch I would have fixed this with a lambda at the call site rather than a makeNSArrayElement in URL.h. But this fix is OK too.
Alex Christensen
Comment 4
2020-04-24 16:05:40 PDT
I think this will prevent future bugs. I'm also working to reduce use of then remove URL's operator String.
EWS
Comment 5
2020-04-24 16:32:08 PDT
Committed
r260679
: <
https://trac.webkit.org/changeset/260679
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 397515
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug