REGRESSION(260485) Payment requests don't do anything https://bugs.webkit.org/show_bug.cgi?id=210997 Source/WTF:

<rdar://problem/62275343>

Patch by Alex Christensen <achristensen@webkit.org> on 2020-04-24
Reviewed by Darin Adler.

We were giving the PKPaymentRequest an NSArray<NSString *> instead of NSArray<NSURL *>.
This was a problem with all uses of createNSArray with Vector<URL>.
Now it's fixed with a test.

* wtf/URL.h:
* wtf/cocoa/URLCocoa.mm:
(WTF::makeNSArrayElement):
(WTF::makeVectorElement):

Tools:

Patch by Alex Christensen <achristensen@webkit.org> on 2020-04-24
Reviewed by Darin Adler.

* TestWebKitAPI/Tests/WTF/cocoa/URLExtras.mm:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/223886@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260679 268f45cc-cd09-0410-ab3c-d52691b4dbfc